--- a/styles/main.css
+++ b/styles/main.css
@@ -1,14 +1,585 @@
-h1 {
-  font-family: "Roboto", sans-serif;
-  font-weight: 400; }
-
 @font-face {
   font-family: "Roboto";
   src: url("../fonts/Roboto-Regular-webfont.woff") format("woff");
   font-weight: normal;
   font-style: normal; }
 
+@font-face {
+  font-family: "Roboto-bold";
+  src: url("../fonts/Roboto-Bold.woff") format("woff");
+  font-weight: 700;
+  font-style: normal; }
+
+@font-face {
+  font-family: "icomoon";
+  src: url("../fonts/icomoon.eot?gydqnf");
+  src: url("../fonts/icomoon.eot?gydqnf#iefix") format("embedded-opentype"), url("../fonts/icomoon.ttf?gydqnf") format("truetype"), url("../fonts/icomoon.woff?gydqnf") format("woff"), url("../fonts/icomoon.svg?gydqnf#icomoon") format("svg");
+  font-weight: normal;
+  font-style: normal;
+  font-display: block; }
+
+[class^="icon-"],
+[class*=" icon-"] {
+  font-family: "icomoon", sans-serif !important;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale; }
+
+.icon-close:before {
+  content: "\f00d"; }
+
+.icon-phone:before {
+  content: "\f095"; }
+
+.icon-bars:before {
+  content: "\f0c9"; }
+
+.header {
+  background: url(../images/header.jpg) no-repeat center/cover;
+  margin-bottom: 100px;
+  position: relative; }
+  .header__wrapper {
+    height: 100vh;
+    position: relative; }
+  .header__title {
+    position: absolute;
+    left: 0;
+    bottom: 165px;
+    font-size: 60px;
+    line-height: 60px;
+    letter-spacing: -1.5px;
+    color: #fff; }
+    .header__title::after {
+      content: "";
+      position: absolute;
+      top: -16px;
+      left: 0;
+      width: 35px;
+      height: 2px;
+      border-radius: 2px;
+      background-color: #fff; }
+  .header__top {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    font-family: "Roboto-bold", sans-serif;
+    font-weight: 700;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    padding-top: 24px; }
+  .header__phone {
+    -webkit-transition: 0.3s;
+    transition: 0.3s;
+    transition: 0.3s; }
+    .header__phone:hover {
+      color: #9fadc2; }
+    .header__phone:active {
+      color: #0075ff; }
+  .header__order {
+    position: relative;
+    -webkit-transition: 0.3s;
+    transition: 0.3s;
+    transition: 0.3s; }
+    .header__order:hover {
+      color: #9fadc2; }
+    .header__order:active {
+      color: #0075ff; }
+    .header__order::before {
+      content: "";
+      position: absolute;
+      left: 0;
+      bottom: -8px;
+      width: 100%;
+      height: 1px;
+      background-color: #fff; }
+  .header__nav {
+    position: absolute;
+    bottom: 36px;
+    left: 0;
+    width: 100%; }
+  .header__icon_bars {
+    display: none; }
+  .header__icon_phone {
+    display: none; }
+
+.nav__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  font-family: "Roboto-bold", sans-serif;
+  font-weight: 700; }
+
+.nav__item {
+  padding: 8px 24px;
+  text-transform: uppercase; }
+  .nav__item_active {
+    position: relative;
+    color: #fff; }
+    .nav__item_active::after {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background-color: rgba(255, 255, 255, 0.1);
+      border-radius: 8px; }
+
+.nav__link {
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  transition: 0.3s; }
+  .nav__link:hover {
+    color: #9fadc2; }
+  .nav__link:active {
+    color: #0075ff; }
+
+.mobile {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: -10px;
+  right: -10px;
+  display: none;
+  background-color: #0075ff;
+  padding: 24px; }
+  .mobile__icon::before {
+    content: "\f00d";
+    font-family: "icomoon", sans-serif;
+    position: absolute;
+    right: 30px;
+    top: 60px;
+    font-size: 20px;
+    color: #fff; }
+  .mobile__logo {
+    text-align: center;
+    margin-bottom: 50px; }
+  .mobile__item {
+    font-size: 22px;
+    line-height: 22px;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    font-family: "Roboto-bold", sans-serif;
+    font-weight: 700;
+    margin-bottom: 32px; }
+  .mobile__order {
+    position: relative; }
+    .mobile__order::after {
+      content: "";
+      position: absolute;
+      bottom: -8px;
+      left: 0;
+      width: 100%;
+      height: 1px;
+      background-color: #fff; }
+  .mobile__call_link {
+    font-size: 12px;
+    line-height: 16px;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    font-family: "Roboto-bold", sans-serif;
+    font-weight: 700;
+    margin-bottom: 16px; }
+
+@media (max-width: 700px) {
+  .header {
+    margin-bottom: 62px; }
+    .header__title {
+      font-family: "Roboto-bold", sans-serif;
+      font-weight: 700;
+      font-size: 46px;
+      line-height: 40px;
+      letter-spacing: -1px;
+      bottom: 100px; }
+    .header__phone {
+      display: none; }
+    .header__order {
+      display: none; }
+    .header__nav {
+      display: none; }
+    .header__icon_phone {
+      position: relative;
+      display: block; }
+      .header__icon_phone::before {
+        content: "\f095";
+        position: absolute;
+        left: 20px;
+        font-family: "icomoon", sans-serif;
+        font-size: 18px; }
+    .header__icon_bars {
+      position: relative;
+      display: block; }
+      .header__icon_bars::after {
+        content: "\f0c9";
+        position: absolute;
+        right: 20px;
+        font-size: 18px;
+        font-family: "icomoon", sans-serif;
+        color: #fff; } }
+
+.aboutUs {
+  margin-bottom: 150px; }
+  .aboutUs__wrapper {
+    display: grid;
+    grid-template-columns: 1fr 1fr; }
+  .aboutUs__title {
+    font-family: "Roboto-bold", sans-serif;
+    font-weight: 700;
+    font-size: 48px;
+    line-height: 48px;
+    letter-spacing: -1.5px; }
+    @media (max-width: 780px) {
+      .aboutUs__title {
+        font-size: 36px;
+        line-height: 36px; } }
+    .aboutUs__title span {
+      color: #0075ff; }
+
+.content__title {
+  font-family: "Roboto-bold", sans-serif;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 30px;
+  color: #0075ff;
+  margin-bottom: 16px; }
+
+.content__text {
+  font-size: 16px;
+  line-height: 27px;
+  color: #3e3e3e; }
+  .content__text span {
+    font-family: "Roboto-bold", sans-serif;
+    font-weight: 700; }
+
+@media (max-width: 780px) {
+  .aboutUs {
+    margin-bottom: 62px; }
+    .aboutUs__wrapper {
+      grid-template-columns: 1fr;
+      grid-gap: 45px; } }
+
+.gallery {
+  margin-bottom: 150px; }
+  .gallery__title {
+    margin-bottom: 60px; }
+  .gallery__btn {
+    text-align: center; }
+    .gallery__btn button {
+      font-family: "Roboto-bold", sans-serif;
+      font-weight: 700;
+      font-size: 16px;
+      line-height: 14px;
+      background-color: transparent;
+      color: #0075ff;
+      border: 2px solid #0075ff;
+      border-radius: 8px;
+      padding: 20px 66px;
+      cursor: pointer;
+      -webkit-transition: 0.3s;
+      transition: 0.3s; }
+      @media (max-width: 415px) {
+        .gallery__btn button {
+          width: 95%; } }
+      .gallery__btn button:hover {
+        -webkit-transform: scale(1.05);
+                transform: scale(1.05);
+        background-color: #0075ff;
+        color: #fff; }
+
+.photos {
+  display: grid;
+  -webkit-box-align: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
+  grid-gap: 20px; }
+  .photos:first-child {
+    grid-template-columns: 2fr 1fr; }
+  .photos:nth-child(3) {
+    grid-template-columns: 1fr 1fr; }
+  .photos:nth-child(5) {
+    grid-template-columns: 1fr 2fr; }
+  .photos__img {
+    max-width: 100%;
+    width: 100%;
+    height: 256px;
+    border-radius: 8px;
+    margin-bottom: 20px; }
+  .photos__text {
+    font-family: "Roboto-bold", sans-serif;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 27px;
+    color: #3e3e3e;
+    margin-bottom: 35px; }
+  .photos__link {
+    color: #0075ff; }
+
+@media (max-width: 780px) {
+  .gallery {
+    margin-bottom: 62px; }
+  .photos__img {
+    height: auto; }
+  .photos:nth-child(1), .photos:nth-child(5) {
+    grid-template-columns: 1fr 1fr; } }
+
+.feedback {
+  margin-bottom: 150px; }
+  .feedback__title {
+    margin-bottom: 90px; }
+  .feedback__wrapper {
+    display: grid;
+    grid-template-columns: repeat(2, 413px);
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between; }
+  @media (max-width: 895px) {
+    .feedback {
+      margin-bottom: 62px; }
+      .feedback__title {
+        margin-bottom: 55px; }
+      .feedback__wrapper {
+        grid-template-columns: 1fr;
+        grid-gap: 30px; } }
+
+.consultation__title {
+  font-family: "Roboto-bold", sans-serif;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 30px;
+  width: 240px;
+  color: #0075ff;
+  margin-bottom: 16px; }
+
+.consultation__text {
+  font-size: 16px;
+  line-height: 27px;
+  color: #3e3e3e; }
+
+.form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column; }
+  .form__input {
+    margin-bottom: 16px;
+    padding: 17px;
+    background-color: #f7f8ff;
+    border: none;
+    border-radius: 8px;
+    -webkit-transition: 0.3s;
+    transition: 0.3s; }
+    .form__input::-webkit-input-placeholder {
+      font-size: 14px;
+      line-height: 14px;
+      color: #b9c1ce; }
+    .form__input::-moz-placeholder {
+      font-size: 14px;
+      line-height: 14px;
+      color: #b9c1ce; }
+    .form__input:-ms-input-placeholder {
+      font-size: 14px;
+      line-height: 14px;
+      color: #b9c1ce; }
+    .form__input::-ms-input-placeholder {
+      font-size: 14px;
+      line-height: 14px;
+      color: #b9c1ce; }
+    .form__input::placeholder {
+      font-size: 14px;
+      line-height: 14px;
+      color: #b9c1ce; }
+    .form__input:nth-child(3) {
+      margin-bottom: 32px; }
+    .form__input:focus {
+      outline-color: #0075ff; }
+    .form__input:hover {
+      -webkit-box-shadow: 0 3px 8px rgba(61, 78, 97, 0.2);
+              box-shadow: 0 3px 8px rgba(61, 78, 97, 0.2); }
+  .form__btn {
+    font-family: "Roboto-bold", sans-serif;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 14px;
+    padding: 21px 0;
+    color: #fff;
+    background-color: #0075ff;
+    -webkit-box-shadow: 0 6px 23px rgba(0, 117, 255, 0.46);
+            box-shadow: 0 6px 23px rgba(0, 117, 255, 0.46);
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    -webkit-transition: 0.3s;
+    transition: 0.3s; }
+    .form__btn:hover {
+      margin: 0 10px; }
+
+.team {
+  margin-bottom: 150px; }
+  .team__title {
+    margin-bottom: 90px; }
+  .team__wrapper {
+    display: grid;
+    grid-template-columns: repeat(3, 240px);
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    text-align: center; }
+  @media (max-width: 810px) {
+    .team {
+      margin-bottom: 62px; }
+      .team__title {
+        margin-bottom: 55px; }
+      .team__wrapper {
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
+        grid-template-columns: 280px;
+        grid-gap: 50px; } }
+
+.item {
+  -webkit-transition: 0.3s;
+  transition: 0.3s; }
+  .item:hover {
+    -webkit-box-shadow: 0 3px 8px rgba(121, 139, 159, 0.1);
+            box-shadow: 0 3px 8px rgba(121, 139, 159, 0.1);
+    border-radius: 20px; }
+  .item:active {
+    border: 3px solid #0075ff; }
+  .item__name {
+    font-family: "Roboto-bold", sans-serif;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 30px;
+    color: #0075ff;
+    margin-bottom: 4px; }
+  .item__position {
+    font-size: 14px;
+    line-height: 27px;
+    color: #9fadc2;
+    margin-bottom: 13px; }
+  .item__comment {
+    font-size: 16px;
+    line-height: 27px;
+    color: #3e3e3e; }
+
+.contact {
+  margin-bottom: 90px; }
+  .contact__title {
+    margin-bottom: 90px; }
+  .contact__wrapper {
+    display: grid;
+    grid-template-columns: 152px 152px 413px;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between; }
+  @media (max-width: 895px) {
+    .contact {
+      margin-bottom: 62px; }
+      .contact__title {
+        margin-bottom: 55px; }
+      .contact__wrapper {
+        grid-template-columns: 1fr;
+        grid-gap: 30px; } }
+  .contact__item {
+    width: 150px; }
+    .contact__item_name {
+      font-size: 14px;
+      line-height: 27px;
+      color: #9fadc2;
+      margin-bottom: 8px; }
+  .contact__phone {
+    margin-bottom: 24px; }
+  .contact__link {
+    font-size: 16px;
+    line-height: 27px;
+    -webkit-transition: 0.3s;
+    transition: 0.3s;
+    transition: 0.3s;
+    color: #3e3e3e; }
+    .contact__link:hover {
+      color: #9fadc2; }
+    .contact__link:active {
+      color: #0075ff; }
+  .contact__textarea {
+    height: 144px;
+    resize: none; }
+
+.footer {
+  background: url(../images/footer.jpg) no-repeat center/cover;
+  height: 360px;
+  position: relative; }
+  .footer__logo {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, 80%);
+            transform: translate(-50%, 80%); }
+
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box; }
+
+html {
+  font-family: "Roboto", Arial, sans-serif;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 16px; }
+
 body {
-  background: #eee; }
+  background: #f2f2f2; }
+
+.container {
+  max-width: 1020px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 0 10px; }
+
+.section__titles {
+  font-size: 48px;
+  line-height: 48px;
+  font-family: "Roboto-bold", sans-serif;
+  font-weight: 700;
+  text-align: center;
+  position: relative; }
+  @media (max-width: 780px) {
+    .section__titles {
+      font-size: 36px;
+      line-height: 36px; } }
+  .section__titles::after {
+    content: "";
+    position: absolute;
+    bottom: -16px;
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+            transform: translateX(-50%);
+    width: 23px;
+    height: 16px;
+    background-image: url(../images/crown.svg) no-repeat center/cover; }
+
+.logo {
+  width: 115px;
+  height: 76px;
+  -webkit-transition: 0.3s;
+  transition: 0.3s; }
+  .logo:hover {
+    -webkit-transform: scale(1.2);
+            transform: scale(1.2); }
 
 /*# sourceMappingURL=main.css.map */
