--- a/styles/main.css
+++ b/styles/main.css
@@ -1,12 +1,12 @@
 @font-face {
   font-family: "Roboto";
-  src: url("../fonts/Roboto-Regular-webfont.woff") format("woff");
-  font-weight: normal;
+  src: url(https://fonts.googleapis.com/css2?family=Roboto&display=swap) format("woff");
+  font-weight: 400;
   font-style: normal; }
 
 @font-face {
   font-family: "Roboto-bold";
-  src: url("../fonts/Roboto-Bold.woff") format("woff");
+  src: url(https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap) format("woff");
   font-weight: 700;
   font-style: normal; }
 
@@ -80,21 +80,19 @@
     padding-top: 24px; }
   .header__phone {
     -webkit-transition: 0.3s;
-    transition: 0.3s;
     transition: 0.3s; }
     .header__phone:hover {
       color: #9fadc2; }
     .header__phone:active {
-      color: #0075ff; }
+      color: #fff; }
   .header__order {
     position: relative;
     -webkit-transition: 0.3s;
-    transition: 0.3s;
     transition: 0.3s; }
     .header__order:hover {
       color: #9fadc2; }
     .header__order:active {
-      color: #0075ff; }
+      color: #fff; }
     .header__order::before {
       content: "";
       position: absolute;
@@ -138,15 +136,16 @@
       bottom: 0;
       background-color: rgba(255, 255, 255, 0.1);
       border-radius: 8px; }
+  .nav__item:link, .nav__item:visited, .nav__item:active {
+    color: #fff; }
 
 .nav__link {
   -webkit-transition: 0.3s;
-  transition: 0.3s;
   transition: 0.3s; }
   .nav__link:hover {
     color: #9fadc2; }
   .nav__link:active {
-    color: #0075ff; }
+    color: #fff; }
 
 .mobile {
   position: absolute;
@@ -246,7 +245,7 @@
       .aboutUs__title {
         font-size: 36px;
         line-height: 36px; } }
-    .aboutUs__title span {
+    .aboutUs__title_link {
       color: #0075ff; }
 
 .content__title {
@@ -322,13 +321,13 @@
     border-radius: 8px;
     margin-bottom: 20px; }
   .photos__text {
-    font-family: "Roboto-bold", sans-serif;
-    font-weight: 700;
     font-size: 16px;
     line-height: 27px;
     color: #3e3e3e;
     margin-bottom: 35px; }
   .photos__link {
+    font-family: "Roboto-bold", sans-serif;
+    font-weight: 700;
     color: #0075ff; }
 
 @media (max-width: 780px) {
@@ -389,28 +388,39 @@
     background-color: #f7f8ff;
     border: none;
     border-radius: 8px;
+    outline: none;
     -webkit-transition: 0.3s;
     transition: 0.3s; }
     .form__input::-webkit-input-placeholder {
       font-size: 14px;
       line-height: 14px;
-      color: #b9c1ce; }
+      color: #b9c1ce;
+      font-family: "Roboto", sans-serif;
+      font-weight: 400; }
     .form__input::-moz-placeholder {
       font-size: 14px;
       line-height: 14px;
-      color: #b9c1ce; }
+      color: #b9c1ce;
+      font-family: "Roboto", sans-serif;
+      font-weight: 400; }
     .form__input:-ms-input-placeholder {
       font-size: 14px;
       line-height: 14px;
-      color: #b9c1ce; }
+      color: #b9c1ce;
+      font-family: "Roboto", sans-serif;
+      font-weight: 400; }
     .form__input::-ms-input-placeholder {
       font-size: 14px;
       line-height: 14px;
-      color: #b9c1ce; }
+      color: #b9c1ce;
+      font-family: "Roboto", sans-serif;
+      font-weight: 400; }
     .form__input::placeholder {
       font-size: 14px;
       line-height: 14px;
-      color: #b9c1ce; }
+      color: #b9c1ce;
+      font-family: "Roboto", sans-serif;
+      font-weight: 400; }
     .form__input:nth-child(3) {
       margin-bottom: 32px; }
     .form__input:focus {
@@ -520,12 +530,11 @@
     line-height: 27px;
     -webkit-transition: 0.3s;
     transition: 0.3s;
-    transition: 0.3s;
     color: #3e3e3e; }
     .contact__link:hover {
       color: #9fadc2; }
     .contact__link:active {
-      color: #0075ff; }
+      color: #3e3e3e; }
   .contact__textarea {
     height: 144px;
     resize: none; }
@@ -552,7 +561,7 @@ html {
   line-height: 16px; }
 
 body {
-  background: #f2f2f2; }
+  background: #fff; }
 
 .container {
   max-width: 1020px;
@@ -560,7 +569,7 @@ body {
   margin: 0 auto;
   padding: 0 10px; }
 
-.section__titles {
+.section__title {
   font-size: 48px;
   line-height: 48px;
   font-family: "Roboto-bold", sans-serif;
@@ -568,19 +577,19 @@ body {
   text-align: center;
   position: relative; }
   @media (max-width: 780px) {
-    .section__titles {
+    .section__title {
       font-size: 36px;
       line-height: 36px; } }
-  .section__titles::after {
+  .section__title::after {
     content: "";
     position: absolute;
-    bottom: -16px;
+    top: 50px;
     left: 50%;
     -webkit-transform: translateX(-50%);
             transform: translateX(-50%);
     width: 23px;
     height: 16px;
-    background-image: url(../images/crown.svg) no-repeat center/cover; }
+    background: url(../images/crown.svg) no-repeat center; }
 
 .logo {
   width: 115px;
